@@ -3,10 +3,12 @@ package ru.runa.wfe.definition;
 import java.util.Date;
 import java.util.List;
 
+import javax.persistence.Basic;
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.EnumType;
 import javax.persistence.Enumerated;
+import javax.persistence.FetchType;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
@@ -105,6 +107,7 @@ public class Deployment extends Identifiable {
     }
 
     @Lob
+    @Basic(fetch = FetchType.LAZY)
     @Column(length = 16777216, name = "BYTES")
     public byte[] getContent() {
         return content;
@@ -157,7 +160,7 @@ public class Deployment extends Identifiable {
     @Transient
     @Override
     public Long getIdentifiableId() {
-        return new Long(getName().hashCode());
+        return Long.valueOf(getName().hashCode());
     }
 
     @Transient
